make cms default

--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -1,4 +1,6 @@
 server { 
+	listen 80 default_server;
+
 	server_name <%= node[:prometheus][:cms][:fqdn] %> <%= node[:prometheus][:cms][:vhost] %>;
 
 	server_tokens   off;
