--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -48,6 +48,10 @@ server {
 	}
 
 	location ~ ^/sites/.*$ {
+	        if ($request_method != GET) {
+			return 403;
+		}
+
 		proxy_pass http://proxy_cms;
 		proxy_redirect    default;
 	}
