only allow GET requests to CMS api

--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -43,6 +43,10 @@ server {
 	}
 
 	location ~ ^/.*/api/v.*$ {
+	        if ($request_method != GET) {
+			return 403;
+		}
+
 		proxy_pass http://proxy_cms;
 		proxy_redirect    default;
 	}
