same for api's env

--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -26,8 +26,8 @@ CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
 
-GELF_HOST=graylog.spiralworks-cloud.com
-GELF_PORT=12197
-STATSD_ENDPOINT=grayphite.spiralworks-cloud.com
-STATSD_PORT=8125
-STATSD_NAMESPACE=prometheus:staging
+GELF_HOST=<%= node[:prometheus][:graylog][:host] %>
+GELF_PORT=<%= node[:prometheus][:graylog][:port] %>
+STATSD_ENDPOINT=<%= node[:prometheus][:statsd][:host] %>
+STATSD_PORT=<%= node[:prometheus][:graylog][:port] %>
+STATSD_NAMESPACE=<%= node[:prometheus][:env] %>
