assume HTTPS is default for all public endpoints

--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -1,8 +1,8 @@
-MS_ENDPOINT=http://<%= node[:prometheus][:web][:fqdn] %>/api/v1
+MS_ENDPOINT=https://<%= node[:prometheus][:web][:fqdn] %>/api/v1
 MS_ENDPOINT_MEMBERINFO=/members/getinfo
 MS_ENDPOINT_MEMBERS=/members
 
-CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
+CMS_ENDPOINT=https://<%= node[:prometheus][:cms][:fqdn] %>/
 CMS_ENDPOINT_INT=http://<%= node[:prometheus][:cms][:int_fqdn] %>/
 CMS_ENDPOINT_BANNERS=/banners
 CMS_ENDPOINT_LOGO=/logo
