use spiral graylog/statsd attributes

--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -24,8 +24,8 @@ CMS_API_LBL=api
 CMS_OPT=operator
 
 
-GELF_HOST=<%= node[:prometheus][:graylog][:host] %>
-GELF_PORT=<%= node[:prometheus][:graylog][:port] %>
-STATSD_ENDPOINT=<%= node[:prometheus][:statsd][:host] %>
-STATSD_PORT=<%= node[:prometheus][:graylog][:port] %>
+GELF_HOST=<%= node[:spiral][:graylog][:host] %>
+GELF_PORT=<%= node[:spiral][:graylog][:gelf_udp][:port] %>
+STATSD_ENDPOINT=<%= node[:spiral][:statsd][:host] %>
+STATSD_PORT=<%= node[:spiral][:statsd][:port] %>
 STATSD_NAMESPACE=<%= node[:prometheus][:env] %>
