use spiral graylog/statsd attributes

--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -26,8 +26,8 @@ CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
 MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
 MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
 
-GELF_HOST=<%= node[:prometheus][:graylog][:host] %>
-GELF_PORT=<%= node[:prometheus][:graylog][:port] %>
-STATSD_ENDPOINT=<%= node[:prometheus][:statsd][:host] %>
-STATSD_PORT=<%= node[:prometheus][:graylog][:port] %>
+GELF_HOST=<%= node[:spiral][:graylog][:host] %>
+GELF_PORT=<%= node[:spiral][:graylog][:gelf_udp][:port] %>
+STATSD_ENDPOINT=<%= node[:spiral][:statsd][:host] %>
+STATSD_PORT=<%= node[:spiral][:statsd][:port] %>
 STATSD_NAMESPACE=<%= node[:prometheus][:env] %>
