use memcached section not prometheus

--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -15,8 +15,8 @@ CMS_ENDPOINT_BYGAMETYPE=/game_item/type
 CMS_ENDPOINT_DICTIONARY=/dictionary/section
 CMS_ENDPOINT_PROMOTIONS=/promo_content
 
-MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
-MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
+MEMCACHED_HOST=<%= node[:memcached][:host] %>
+MEMCACHED_PORT=<%= node[:memcached][:port] %>
 
 C_TOKEN_NAME=pt_token
 CMS_API_VERSION=v1
