--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -23,8 +23,8 @@ BO_AFFILIATE=affiliateWS.asmx?wsdl
 
 CMS_ENDPOINT=http://<%= node[:prometheus][:cms][:fqdn] %>/
 
-MEMCACHED_HOST=<%= node[:prometheus][:memcached][:host] %>
-MEMCACHED_PORT=<%= node[:prometheus][:memcached][:port] %>
+MEMCACHED_HOST=<%= node[:memcached][:host] %>
+MEMCACHED_PORT=<%= node[:memcached][:port] %>
 
 GELF_HOST=<%= node[:spiral][:graylog][:host] %>
 GELF_PORT=<%= node[:spiral][:graylog][:gelf_udp][:port] %>
