--- a/prometheus/templates/default/cms_settings.php.erb
+++ b/prometheus/templates/default/cms_settings.php.erb
@@ -51,7 +51,7 @@ $conf['memcache_options'] = array(
 );
 
 $conf['memcache_servers'] = array(
-  '<%= node[:prometheus][:memcached][:host] %>:<%= node[:prometheus][:memcached][:port] %>' => 'default'
+  '<%= node[:memcached][:host] %>:<%= node[:memcached][:port] %>' => 'default'
 );
 
 $conf['memcache_bins'] = array(
