--- a/prometheus/templates/default/api-nginx.conf.erb
+++ b/prometheus/templates/default/api-nginx.conf.erb
@@ -25,6 +25,16 @@ server {
 		include /etc/nginx/cors.conf;
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		include fastcgi_params;
+
+		proxy_buffer_size 128k;
+		proxy_buffers 4 256k;
+		proxy_busy_buffers_size 256k;
+
+		fastcgi_buffering on;
+		fastcgi_buffer_size 16k;
+		fastcgi_buffers 16 16k;
+		fastcgi_connect_timeout 15s;
+
 		fastcgi_param SCRIPT_FILENAME $request_filename;
 		fastcgi_intercept_errors on;
 		fastcgi_pass unix:/var/run/php5-fpm.sock;
