--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -8,7 +8,7 @@ upstream proxy_cms {
 	server cms2;
 }
 
-<% if node[:prometheus][:handle_ssl] == "true" %>
+<% if node[:prometheus][:force_ssl] == "true" %>
 server {
 	listen 80 default_server;
 	rewrite ^(.*)$ https://$host$request_uri permanent;
@@ -16,7 +16,7 @@ server {
 <%- end %>
 
 server {
-	<% if node[:prometheus][:handle_ssl] != "true" %>
+	<% if node[:prometheus][:force_ssl] != "true" %>
 	listen 80 default_server;
 	<%- end %>
 
