--- a/prometheus/templates/default/cms-nginx.conf.erb
+++ b/prometheus/templates/default/cms-nginx.conf.erb
@@ -10,8 +10,8 @@ server {
  
 	access_log /var/log/nginx/cms_access.log;
 
-	<% if node['spiral']['graylog']['enable'] == true %>
-	error_log syslog:server=<%= node['spiral']['graylog']['host'] %>:<%= node['spiral']['graylog']['nginx_err']['port'] %>,facility=daemon;
+	<% if node[:spiral][:graylog][:enable] == true %>
+	error_log syslog:server=<%= node[:spiral][:graylog][:host] %>:<%= node[:spiral][:graylog][:nginx_err][:port] %>,facility=daemon;
 	<%- else %>
 	error_log /var/log/nginx/cms_error.log;
 	<%- end %>
