--- a/prometheus/templates/default/cms_settings.php.erb
+++ b/prometheus/templates/default/cms_settings.php.erb
@@ -1,6 +1,6 @@
 <?php
 
-include_once 'settings.system.php';
+include_once DRUPAL_ROOT . '/sites/default/settings.system.php';
 
 $update_free_access = FALSE;
 
