--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -8,18 +8,7 @@ upstream proxy_cms {
 	server cms2;
 }
 
-<% if node[:prometheus][:force_ssl] == "true" %>
 server {
-	listen 80 default_server;
-	rewrite ^(.*)$ https://$host$request_uri permanent;
-}
-<%- end %>
-
-server {
-	<% if node[:prometheus][:force_ssl] != "true" %>
-	listen 80 default_server;
-	<%- end %>
-
 	server_tokens   off;
 	more_set_headers 'Server: MagicBooBooLand';
 
@@ -48,6 +37,11 @@ server {
 	}
 
 	location @rewrite {
+		<% if node[:prometheus][:force_ssl] == "true" %>
+		if ( $sheme = 'http' ) {
+			rewrite ^(.*)$ https://$host$request_uri permanent;
+		}
+		<%- end %>
 		rewrite ^ /index.php;
 	}
 
