--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -15,11 +15,12 @@ server {
 	more_set_headers 'Server: MagicBooBooLand';
 
  	root /srv/http/web/current/public;
- 	access_log /var/log/nginx/web_access.log;
 
 	<% if node[:spiral][:graylog][:enable] == true %>
+	access_log syslog:server=<%= node[:spiral][:graylog][:host] %>:<%= node[:spiral][:graylog][:nginx_acc][:port] %>,facility=daemon;
 	error_log syslog:server=<%= node[:spiral][:graylog][:host] %>:<%= node[:spiral][:graylog][:nginx_err][:port] %>,facility=daemon;
 	<%- else %>
+	access_log /var/log/nginx/web_access.log;
 	error_log /var/log/nginx/web_error.log;
 	<%- end %>
 
