--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -14,6 +14,13 @@ server {
 	listen 443 ssl spdy;
 	ssl_certificate /etc/nginx/ssl/prometheus.crt;
 	ssl_certificate_key /etc/nginx/ssl/prometheus.key;
+	ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+	ssl_session_cache shared:SSL:20m;
+	ssl_session_timeout 60m;
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+	ssl_prefer_server_ciphers on;
+	ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5
+	add_header Strict-Transport-Security "max-age=86400" always;
 	<%- end %>	
 
 	server_name www.<%= node[:prometheus][:web][:fqdn] %>;
@@ -45,6 +52,13 @@ server {
 	listen 443 ssl spdy;
 	ssl_certificate /etc/nginx/ssl/prometheus.crt;
 	ssl_certificate_key /etc/nginx/ssl/prometheus.key;
+	ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+	ssl_session_cache shared:SSL:20m;
+	ssl_session_timeout 60m;
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+	ssl_prefer_server_ciphers on;
+	ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5
+	add_header Strict-Transport-Security "max-age=86400" always;
 	<%- end %>
 
 	index index.php index.html index.htm;
