--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -114,7 +114,7 @@ server {
 		fastcgi_index index.php;
 	}
 
-	location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+	location ~* \.(js|css|png|jpg|jpeg|gif|ico|ttf|woff)$ {
 		expires max;
 		log_not_found off;
 	}
