add *.localdomain suffices for graylog and graphite

--- a/opsworks_stack_state_sync/templates/default/hosts.erb
+++ b/opsworks_stack_state_sync/templates/default/hosts.erb
@@ -31,4 +31,4 @@ ff02::3 ip6-allhosts
 <% end -%>
 
 
-52.68.44.211	graphite.local graylog.local
+52.68.44.211	graphite.local graylog.local graphite.localdomain graylog.localdomain
