turns out, need to use node[]

--- a/opsworks_stack_state_sync/templates/default/hosts.erb
+++ b/opsworks_stack_state_sync/templates/default/hosts.erb
@@ -30,7 +30,7 @@ ff02::3 ip6-allhosts
 <% end -%>
 <% end -%>
 
-<% @custom_hosts.each do |host| -%>
+<% @node[:custom_hosts].each do |host| -%>
 <%= host %>
 <% end -%>
 
