--- a/prometheus/templates/default/cmsv2-nginx.conf.erb
+++ b/prometheus/templates/default/cmsv2-nginx.conf.erb
@@ -4,6 +4,7 @@ server {
 	access_log /var/log/nginx/cmsv2_access.log;
 	error_log /var/log/nginx/cmsv2_error.log;
 	add_header Access-Control-Allow-Origin *;
+	add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS';
 
 	server_name <%= node[:prometheus][:cmsv2][:fqdn] %> <%= node[:prometheus][:cmsv2][:vhost] %>;
 
