add timeout settings from old cms

--- a/prometheus/templates/default/cmsv2-nginx.conf.erb
+++ b/prometheus/templates/default/cmsv2-nginx.conf.erb
@@ -13,6 +13,15 @@ server {
 	}
 
 	location ~ \.php$ {
+		proxy_buffer_size 128k;
+		proxy_buffers 4 256k;
+		proxy_busy_buffers_size 256k;
+
+		fastcgi_buffering on;
+		fastcgi_buffer_size 16k;
+		fastcgi_buffers 16 16k;
+		fastcgi_connect_timeout 600s;
+
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		include fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $request_filename;
