--- a/prometheus/templates/default/bogw.conf.erb
+++ b/prometheus/templates/default/bogw.conf.erb
@@ -26,4 +26,12 @@ server {
 	location / {
 		try_files $uri $uri/ =404;
 	}
+
+	location /dE8hoCJoyutI0roNOnsaE3UmsKdA9Cet {
+		stub_status on;
+		access_log off;
+		allow 52.74.204.170/32;
+		allow 127.0.0.1/32;
+		deny all;
+	}
 }
