--- a/phabricator/templates/default/php.ini.erb
+++ b/phabricator/templates/default/php.ini.erb
@@ -38,7 +38,7 @@ doc_root =
 user_dir =
 enable_dl = Off
 file_uploads = On
-upload_max_filesize = 2M
+upload_max_filesize = 32M
 max_file_uploads = 20
 allow_url_fopen = On
 allow_url_include = Off
@@ -171,4 +171,5 @@ ldap.max_links = -1
 [mcrypt]
 [dba]
 [opcache]
+opcache.validate_timestamps = "0"
 [curl]
