--- a/phabricator/templates/default/nginx.erb
+++ b/phabricator/templates/default/nginx.erb
@@ -33,5 +33,7 @@ server {
     fastcgi_param  SERVER_SOFTWARE    nginx/$nginx_version;
 
     fastcgi_param  REMOTE_ADDR        $remote_addr;
+
+    client_max_body_size 32M;
   }
 }
