--- a/phabricator/templates/default/php.ini.erb
+++ b/phabricator/templates/default/php.ini.erb
@@ -1,6 +1,6 @@
 [PHP]
 
-date.timezone = "Asia/Manila"
+date.timezone = <%= node['phabricator']['timezone'] %>
 engine = On
 short_open_tag = Off
 asp_tags = Off
@@ -16,7 +16,7 @@ zend.enable_gc = On
 expose_php = On
 max_execution_time = 30
 max_input_time = 60
-memory_limit = 128M
+memory_limit = -1
 error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
 display_errors = Off
 display_startup_errors = Off
