--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -78,6 +78,10 @@ server {
 		rewrite ^ /index.php;
 	}
 
+	location ~ /pages/pt-integration-test.*$ {
+		rewrite ^ /index.php;
+	}
+
 	location @rewrite {
 		<% if node[:prometheus][:force_ssl] == "true" %>
 		if ( $scheme = 'http' ) {
