--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -61,6 +61,10 @@ server {
 	ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
 	<%- end %>
 
+	<% if node[:prometheus][:pagespeed] == "true" %>
+	incldue /etc/nginx/pagespeed.conf;
+	<%- end %>
+
 	index index.php index.html index.htm;
 
 	# Make site accessible from http://localhost/
