--- a/prometheus/templates/default/cmsv2-nginx.conf.erb
+++ b/prometheus/templates/default/cmsv2-nginx.conf.erb
@@ -9,7 +9,7 @@ server {
 	server_name <%= node[:prometheus][:cmsv2][:fqdn] %> <%= node[:prometheus][:cmsv2][:vhost] %>;
 
 	<% if node[:prometheus][:pagespeed] == "true" %>
-	incldue /etc/nginx/pagespeed.conf;
+	include /etc/nginx/pagespeed.conf;
 	<%- end %>
 
 	location / {
