generalize www. to non-www redirect so we don't have to add any server_names

--- a/prometheus/templates/default/web-nginx.conf.erb
+++ b/prometheus/templates/default/web-nginx.conf.erb
@@ -20,7 +20,7 @@ server {
 	ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
 	<%- end %>	
 
-	server_name www.<%= node[:prometheus][:web][:fqdn] %>;
+	server_name www.*;
 	server_tokens   off;
 	more_set_headers 'Server: MagicBooBooLand';
 
