use spiral's phpfpm instead

--- a/piwik/templates/default/nginx-site-piwik.erb
+++ b/piwik/templates/default/nginx-site-piwik.erb
@@ -1,15 +1,24 @@
 server {
-  listen 80 default_server;
-  server_tokens off;
+	listen 80 default_server;
+	server_tokens off;
 
-  root <%= @piwik_install_path %>/piwik;
+	root <%= @piwik_install_path %>/piwik;
 
-  fastcgi_index   index.php;
+	location ~ \.php$ {
+		proxy_buffer_size 128k;
+		proxy_buffers 4 256k;
+		proxy_busy_buffers_size 256k;
 
-  location ~ \.php {
-    include /etc/nginx/fastcgi_params;
-    keepalive_timeout 0;
-    fastcgi_param   SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-    fastcgi_pass    <%= @php_fcgi_pass %>;
-  }
+		fastcgi_buffering on;
+		fastcgi_buffer_size 16k;
+		fastcgi_buffers 16 16k;
+		fastcgi_connect_timeout 600s;
+
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $request_filename;
+		fastcgi_intercept_errors on;
+		fastcgi_pass unix:/var/run/php5-fpm.sock;
+		fastcgi_index index.php;
+	}
 }
