--- a/piwik/templates/default/nginx-site-piwik.erb
+++ b/piwik/templates/default/nginx-site-piwik.erb
@@ -4,6 +4,10 @@ server {
 
 	root <%= @piwik_install_path %>/piwik;
 
+	location / {
+		try_files $uri $uri/ /index.php?$query_string;
+	}
+
 	location ~ \.php$ {
 		proxy_buffer_size 128k;
 		proxy_buffers 4 256k;
