--- a/piwik/templates/default/nginx-site-piwik.erb
+++ b/piwik/templates/default/nginx-site-piwik.erb
@@ -2,6 +2,7 @@ server {
 	listen 80 default_server;
 	server_tokens off;
 
+	index index.php
 	root <%= @piwik_install_path %>/piwik;
 
 	location / {
