add passthrough for old CMS's files

--- a/prometheus/templates/default/cmsv2-nginx.conf.erb
+++ b/prometheus/templates/default/cmsv2-nginx.conf.erb
@@ -34,6 +34,14 @@ server {
 		fastcgi_index index.php;
 	}
 
+	location ~ ^/sites/default/files/.*$ {
+		if ($request_method != GET) {
+			return 403;
+		}
+
+		root /srv/http/cms/shared/;
+	}
+
 	location ~ /\. {
 		deny all;
 	}
