added new nginx directive to cmsv2

--- a/prometheus/templates/default/cmsv2-nginx.conf.erb
+++ b/prometheus/templates/default/cmsv2-nginx.conf.erb
@@ -42,6 +42,16 @@ server {
 		root /srv/http/cms/shared/;
 	}
 
+        location ~ ^/uploaded/*$ {
+                if ($request_method != GET) {
+                        return 403;
+                }
+
+                root /srv/http/cmsv2/shared/public/uploaded;
+
+        }
+
+
 	location ~ /\. {
 		deny all;
 	}
