add debug custom json and CASHIER_PAGE_DEV key to frontend .env

--- a/prometheus/templates/default/web.env.erb
+++ b/prometheus/templates/default/web.env.erb
@@ -29,3 +29,6 @@ GELF_PORT=<%= node[:spiral][:graylog][:gelf_udp][:port] %>
 STATSD_ENDPOINT=<%= node[:spiral][:statsd][:host] %>
 STATSD_PORT=<%= node[:spiral][:statsd][:port] %>
 STATSD_NAMESPACE=<%= node[:prometheus][:env] %>
+
+# debug / development mode options
+CASHIER_PAGE_DEV=<%= node[:prometheus][:debug] %>
