--- a/prometheus/templates/default/cmsv2-nginx.conf.erb
+++ b/prometheus/templates/default/cmsv2-nginx.conf.erb
@@ -17,6 +17,10 @@ server {
 	}
 
 	location ~ \.php$ {
+                <% if node[:prometheus][:enable_cors] == "true" %>
+                include /etc/nginx/cors.conf;
+                <%- end %>
+
 		proxy_buffer_size 128k;
 		proxy_buffers 4 256k;
 		proxy_busy_buffers_size 256k;
