--- a/prometheus/templates/default/api.env.erb
+++ b/prometheus/templates/default/api.env.erb
@@ -31,3 +31,7 @@ GELF_PORT=<%= node[:spiral][:graylog][:gelf_udp][:port] %>
 STATSD_ENDPOINT=<%= node[:spiral][:statsd][:host] %>
 STATSD_PORT=<%= node[:spiral][:statsd][:port] %>
 STATSD_NAMESPACE=<%= node[:prometheus][:env] %>
+
+
+# payment related
+DADDY_PAY_ENDPOINT=<%= node[:prometheus][:api][:daddy_pay_endpoint] %>
